ChangeLog for Pylint
====================

--
    * Do not flag names in nested with statements as undefined.
    * Added a new warning 'old-raise-syntax' for the deprecated syntax
      raise Exception, args
    * astng has been renamed astroid
    * bitbucket #6: put back documentation in source distribution
    * fix spelling of max-branchs option, now max-branches

    * Added a new base class and interface for checkers that work on the
      tokens rather than the syntax, and only tokenize the input file
      once.

2013-04-25  --  0.28.0
    * bitbucket #1: fix "dictionary changed size during iteration" crash

    * #74013: new E1310[bad-str-strip-call] message warning when a call to a
      {l,r,}strip method contains duplicate characters (patch by Torsten Marek)

    * #123233: new E0108[duplicate-argument-name] message reporting duplicate
      argument names

    * #81378: emit W0120[useless-else-on-loop] for loops without break

    * #124660: internal dependencies should not appear in external dependencies
      report

    * #124662: fix name error causing crash when symbols are included in output
      messages

    * #123285: apply pragmas for warnings attached to lines to physical source
      code lines

    * #123259: do not emit E0105 for yield expressions inside lambdas

    * #123892: don't crash when attempting to show source code line that can't
      be encoded with the current locale settings

    * Simplify checks for dangerous default values by unifying tests for all
      different mutable compound literals.

    * Improve the description for E1124[redundant-keyword-arg]



2013-02-26  --  0.27.0
    * #20693: replace pylint.el by Ian Eure version (patch by J.Kotta)

    * #105327: add support for --disable=all option and deprecate the
      'disable-all' inline directive in favour of 'skip-file' (patch by
      A.Fayolle)

    * #110840: add messages I0020 and I0021 for reporting of suppressed