@@ -86,6 +86,8 @@ max-module-lines=1000
 # tab).
 indent-string='    '
 
+# Regexp for a line that is allowed to be longer than the limit.
+ignore-long-lines=^\s*(# )?<?https?://\S+>?$
 
 [BASIC]
 
